--- a/recipe.html
+++ b/recipe.html
@@ -34,7 +34,7 @@
 		<table>
 			<tr>
 				<td style="text-align:right">4 kg</td>
-				<td class="item">Whale meat</td>
+				<td class="item">Reclaimed whale meat</td>
 			</tr>
 			<tr>
 				<td style="text-align:right">3/4 cup</td>
